42.alpha: Scanout changes lead to g-s crash in import_scanout_gbm_bo() when starting fullscreen game
With mutter 42.alpha and g-s 42.alpha, g-s crashes as soon as a fullscreen game starts.
This issue did not exist the last time I build mutter and g-s (main from 25th December 2021).
Reproduction steps:
- Build mutter and g-s at 42.alpha (current main should lead to the same crash)
- Run a wayland session (in this case I used EGLStreams here)
- Run a fullscreen game, e.g. Dota 2
- Observe the crash
backtrace: backtrace